deployment to heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
-click==6.7
-dominate==2.3.1
-Flask==0.12.2
+altgraph==0.17
+auto-py-to-exe==2.10.0
+bottle==0.12.19
+bottle-websocket==0.2.9
+click==8.0.1
+dominate==2.6.0
+Eel==0.12.4
+Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-Flask-Script==2.0.5
-Flask-WTF==0.14.2
-gunicorn==19.7.1
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
+Flask-Script==2.0.6
+future==0.18.2
+gevent==21.8.0
+gevent-websocket==0.10.1
+greenlet==1.1.1
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+psycopg2==2.9.1
+pyinstaller==4.5.1
+pyinstaller-hooks-contrib==2021.2
 visitor==0.1.3
-Werkzeug==0.12.2
-WTForms==2.1
+Werkzeug==2.0.1
+whichcraft==0.6.1
+zope.event==4.5.0
+zope.interface==5.4.0
